--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,8 @@ numpy==1.18.1
 scikit-learn==0.23.2
 matplotlib==3.1.3
 joblib==0.13.2
-scipy==1.2.1
-statsmodels==0.9.0
+scipy
+statsmodels
 IPython==7.4.0
+tox
+pytest
