--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,193 @@
+absl-py==0.11.0
+aiohttp==3.7.3
+alpha-vantage==2.3.1
+appdirs==1.4.4
+argon2-cffi==20.1.0
+astroid==2.4.2
+astunparse==1.6.3
+async-generator==1.10
+async-timeout==3.0.1
+atpublic==2.1.3
+attrs==20.3.0
+backcall==0.2.0
+beautifulsoup4==4.9.3
+bleach==3.2.1
+bs4==0.0.1
+cached-property==1.5.2
+cachetools==4.2.0
+certifi==2020.12.5
+cffi==1.14.4
+chardet==4.0.0
+-e git+https://github.com/sukilsiva/ML-WorkFlow.git@2c7ece77321c0cec3e5479cbbac9766e40271908#egg=ChurnPrediction
+click==7.1.2
+cloudpickle==1.6.0
+colorama==0.4.4
+commonmark==0.9.1
+ConfigArgParse==1.2.3
+configobj==5.0.6
+cycler==0.10.0
+decorator==4.4.2
+defusedxml==0.6.0
+dictdiffer==0.8.1
+diskcache==5.2.1
+distlib==0.3.1
+distro==1.5.0
+dpath==2.0.1
+dulwich==0.20.20
+dvc==2.0.6
+filelock==3.0.12
 Flask==1.1.2
-gunicorn==19.9.0
+Flask-BasicAuth==0.2.0
+Flask-MySQL==1.5.2
+flatbuffers==1.12
+flatten-dict==0.3.0
+flufl.lock==3.2
+fsspec==0.8.7
+ftfy==5.9
+funcy==1.15
+future==0.18.2
+gast==0.3.3
+gevent==21.1.0
+geventhttpclient==1.4.4
+gitdb==4.0.5
+GitPython==3.1.14
+google-auth==1.24.0
+google-auth-oauthlib==0.4.2
+google-pasta==0.2.0
+grandalf==0.6
+greenlet==1.0.0
+grpcio==1.32.0
+h5py==2.10.0
+hyperopt==0.2.5
+idna==2.10
+imbalanced-learn==0.7.0
+imblearn==0.0
+iniconfig==1.1.1
+ipykernel==5.4.3
+ipython==7.19.0
+ipython-genutils==0.2.0
+ipywidgets==7.6.3
+isort==5.7.0
 itsdangerous==1.1.0
-Jinja2==2.10.1
+jedi==0.18.0
+Jinja2==2.11.2
+joblib==1.0.0
+jsonpath-ng==1.5.2
+jsonschema==3.2.0
+jupyter==1.0.0
+jupyter-client==6.1.11
+jupyter-console==6.2.0
+jupyter-core==4.7.0
+jupyterlab-pygments==0.1.2
+jupyterlab-widgets==1.0.0
+jupyterthemes==0.20.0
+Keras-Preprocessing==1.1.2
+kiwisolver==1.3.1
+lazy-object-proxy==1.4.3
+lesscpy==0.14.0
+locust==1.4.1
+mailchecker==4.0.5
+Markdown==3.3.3
 MarkupSafe==1.1.1
-Werkzeug==0.15.5
-pandas==1.0.1
-numpy==1.18.1
-scikit-learn==0.23.2
-matplotlib==3.1.3
-joblib==0.13.2
-scipy
-statsmodels
-IPython==7.4.0
-tox
-pytest
+matplotlib==3.3.3
+mccabe==0.6.1
+mechanize==0.4.5
+mistune==0.8.4
+msgpack==1.0.2
+multidict==5.1.0
+nanotime==0.5.2
+nbclient==0.5.1
+nbconvert==6.0.7
+nbformat==5.1.2
+nest-asyncio==1.4.3
+networkx==2.5
+notebook==6.2.0
+numpy==1.19.5
+opt-einsum==3.3.0
+packaging==20.8
+pandas==1.2.0
+pandocfilters==1.4.3
+parso==0.8.1
+pathlib2==2.3.5
+pathspec==0.8.1
+patsy==0.5.1
+phonenumbers==8.12.20
+pickleshare==0.7.5
+plotly==4.14.3
+pluggy==0.13.1
+ply==3.11
+prometheus-client==0.9.0
+prompt-toolkit==3.0.10
+protobuf==3.14.0
+psutil==5.8.0
+ptyprocess==0.7.0
+py==1.10.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.20
+pydot==1.4.2
+pygit2==1.5.0
+Pygments==2.7.4
+pygtrie==2.3.2
+pylint==2.6.0
+PyMySQL==1.0.2
+pyparsing==2.4.7
+PyQt5-sip==12.8.1
+pyrsistent==0.17.3
+pytest==6.2.2
+python-benedict==0.23.2
+python-dateutil==2.8.1
+python-fsutil==0.4.0
+python-slugify==4.0.1
+pytz==2021.1
+PyYAML==5.4.1
+pyzmq==21.0.1
+qtconsole==5.0.1
+QtPy==1.9.0
+requests==2.25.1
+requests-oauthlib==1.3.0
+retrying==1.3.3
+rich==9.13.0
+rsa==4.7
+ruamel.yaml==0.16.13
+ruamel.yaml.clib==0.2.2
+scikit-learn==0.24.0
+scipy==1.6.0
+seaborn==0.11.1
+Send2Trash==1.5.0
+shortuuid==1.0.1
+shtab==1.3.5
+six==1.15.0
+smmap==3.0.5
+soupsieve==2.2
+SQLAlchemy==1.3.22
+statsmodels==0.12.1
+tabulate==0.8.9
+tensorboard==2.4.1
+tensorboard-plugin-wit==1.7.0
+tensorflow==2.4.0
+tensorflow-estimator==2.4.0
+termcolor==1.1.0
+terminado==0.9.2
+testpath==0.4.4
+text-unidecode==1.3
+threadpoolctl==2.1.0
+toml==0.10.2
+tornado==6.1
+tox==3.23.0
+tqdm==4.56.0
+traitlets==5.0.5
+typing-extensions==3.7.4.3
+urllib3==1.26.4
+virtualenv==20.4.3
+voluptuous==0.12.1
+wcwidth==0.2.5
+webencodings==0.5.1
+Werkzeug==1.0.1
+widgetsnbextension==3.5.1
+wrapt==1.12.1
+xmltodict==0.12.0
+yarl==1.6.3
+zc.lockfile==2.0
+zope.event==4.5.0
+zope.interface==5.2.0
