--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
+# Local Packages Install
+-e .
+
+# Third Party Packages Install
 absl-py==0.11.0
 aiohttp==3.7.3
 alpha-vantage==2.3.1
@@ -18,7 +22,6 @@ cachetools==4.2.0
 certifi==2020.12.5
 cffi==1.14.4
 chardet==4.0.0
--e git+https://github.com/sukilsiva/ML-WorkFlow.git@2c7ece77321c0cec3e5479cbbac9766e40271908#egg=ChurnPrediction
 click==7.1.2
 cloudpickle==1.6.0
 colorama==0.4.4
