Notebooks and test_json Updated

--- a/params.yaml
+++ b/params.yaml
@@ -26,6 +26,8 @@ estimators:
 
 model_dir: saved_models
 
+testing_path:
+  json_file_path: ML-WorkFlow/tests
 
 reports:
   params: report/params.json
