--- a/params.yaml
+++ b/params.yaml
@@ -33,5 +33,5 @@ reports:
   params: report/params.json
   scores: report/scores.json
 
-scalar_path: saved_packages/scalar.joblib
+scalar_path: saved_packages
 webapp_model_dir: prediction_service/model/model.joblib
