--- a/.github/workflows/ci-cd-pipeline.yaml
+++ b/.github/workflows/ci-cd-pipeline.yaml
@@ -35,6 +35,9 @@ jobs:
     - name: Test with pytest
       run: |
         pytest -v
+    - name: Test with DVC
+      run: |
+        dvc repro
     - name: Deploy to Heroku
       env:
         HEROKU_API_TOKEN: ${{ secrets.HEROKU_API_TOKEN }}
