--- a/params.yaml
+++ b/params.yaml
@@ -17,11 +17,11 @@ split_data:
 estimators:
   RandomForestClassifier:
     params:
-      n_estimators: 2000
-      min_samples_split: 12
-      min_samples_leaf: 6
-      max_features: 'sqrt'
-      max_depth: 1000
+      n_estimators: 1000
+      min_samples_split: 14
+      min_samples_leaf: 8
+      max_features: 'log2'
+      max_depth: 10
       criterion: 'gini'
 
 model_dir: saved_models
